Adjust min-height to Prevent layout shift when CKEditor is loaded
https://xetown.com/questions/1801094

--- a/common/js/plugins/jquery.fileupload/css/style.css
+++ b/common/js/plugins/jquery.fileupload/css/style.css
@@ -240,8 +240,7 @@ button.xefu-btn {
 
 p.xefu-dropzone-message {
 	display: inline-block;
-	margin: 0;
-	margin-left: 5px;
+	margin: 0 0 0 5px !important;
 	line-height: 24px;
 	vertical-align: middle;
 }
